# cookiecutter-kivymd

./: .#README.md  .gitignore  README.md  cookiecutter.json
{{cookiecutter.app_name}}/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.ide  Makefile  README.md  buildozer.spec  pyproject.toml
{{cookiecutter.app_name}}/src/{{cookiecutter.app_name | lower}}/: main.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: main.py  {{cookiecutter.app_name}}.kv
