[tool.poetry]
name = "{{cookiecutter.app_name}}"
version = "0.1.0"
description = "TODO"
authors = [{{cookiecutter.full_name}} {{cookiecutter.email}}]

[tool.poetry.dependencies]
python = "^3.6"
android-tool = "^1.1.2"
kivy = "^1.11.1"
kivymd = "^0.104.1"
pyjnius = "^1.3.0"
plyer = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
coverage = {extras = ["toml"], version = "^5.0.3"}
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^4.3.21"

[tool.coverage.run]
branch = true
source = "{{cookiecutter.app_name}}"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[isort]
line_length=200